web-infras/parser/tests/fixtures/babel/es2015/arrow-functions/inner-parens-array-pattern-3/output.txt
[SyntaxError]: Invalid parenthesized assignment pattern. (1,4)
1|([(a) = [] ] = []) => {}
 |  ^
